--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "npm": "7.18.1"
     },
     "scripts": {
-        "client": "cd client && npm run start",
+        "client": "npm start --prefix client",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "start": "node server.js",
