--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "crwn-clothing-server",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "engines": {
         "node": "16.4.0",
         "npm": "7.18.1"
     },
     "scripts": {
-        "client": "npm run start --prefix client",
+        "client": "cd client && npm run start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "start": "node server.js",
@@ -18,9 +18,11 @@
         "cors": "2.8.5",
         "dotenv": "7.0.0",
         "express": "^4.16.4",
+        "express-sslify": "^1.2.0",
         "stripe": "6.28.0"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1"
+        "concurrently": "^4.0.1",
+        "nodemon": "^2.0.12"
     }
 }
