--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "crwn-clothing-server",
+    "name": "crawn-clothing-server",
     "version": "1.1.0",
     "engines": {
         "node": "16.4.0",
@@ -10,7 +10,7 @@
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "start": "node server.js",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+        "build": "run build"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
