--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
         "start": "node server.js",
-        "build": "run build"
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
